# gmt-controllers

./: .gitignore  Cargo.toml  README.md  build.rs  config_slx2022b.m
examples/: mount_control.rs
m1-ctrl/actuators/center/: Cargo.toml  build.rs
m1-ctrl/actuators/center/src/: lib.rs
m1-ctrl/actuators/center/sys/: M1SA_Control_CS.c  M1SA_Control_CS.h  M1SA_Control_CS_data.c  M1SA_Control_CS_private.h  M1SA_Control_CS_types.h  rt_defines.h  rtwtypes.h
m1-ctrl/actuators/outer/: Cargo.toml  build.rs
m1-ctrl/actuators/outer/src/: lib.rs
m1-ctrl/actuators/outer/sys/: M1SA_Control_OA.c  M1SA_Control_OA.h  M1SA_Control_OA_data.c  M1SA_Control_OA_private.h  M1SA_Control_OA_types.h  rt_defines.h  rtwtypes.h
m1-ctrl/calib_dt/: m1_ctrl_dt.mat
m1-ctrl/hardpoints/: Cargo.toml  build.rs
m1-ctrl/hardpoints/src/: lib.rs
m1-ctrl/hardpoints/sys/: HP_dyn_dTF.c  HP_dyn_dTF.h  HP_dyn_dTF_private.h  HP_dyn_dTF_types.h  mod.rs  rt_defines.h  rtwtypes.h
m1-ctrl/hp-cpp/: Cargo.toml  build.rs
m1-ctrl/hp-cpp/examples/: hp_cpp.rs
m1-ctrl/hp-cpp/src/: lib.rs
m1-ctrl/hp-cpp/sys/: ert_main.c  m1hp_cpp.c  m1hp_cpp.h  m1hp_cpp_data.c  m1hp_cpp_private.h  m1hp_cpp_types.h  rt_defines.h  rtwtypes.h  zero_crossing_types.h
m1-ctrl/simulink-models/: M1DCS_2_rust.slx  M1DCS_2_rust.slx.r2020b  M1DCS_2_rustR2018b.slx  config_slx2022b.m  controls_5pt1g1K_z30_llTT_oad.mat  hp_dyn_step_test.mat  load_M1DCS_data.m  m1_act_impulse_test.mat
m2-ctrl/asm/calib_dt/: m2asm_ctrl_dt.mat
m2-ctrl/asm/pid-damping/: Cargo.toml  build.rs
m2-ctrl/asm/pid-damping/src/: lib.rs
m2-ctrl/asm/pid-damping/sys/: ASM_PIplusD_Fd.c  ASM_PIplusD_Fd.h  ASM_PIplusD_Fd_data.c  ASM_PIplusD_Fd_private.h  ASM_PIplusD_Fd_types.h  rt_defines.h  rtwtypes.h
m2-ctrl/asm/positionner/: Cargo.toml  build.rs
m2-ctrl/asm/positionner/sys/: M2P_act_Cfb.c  M2P_act_Cfb.h  M2P_act_Cfb_data.c  M2P_act_Cfb_private.h  M2P_act_Cfb_types.h  rt_defines.h  rtwtypes.h
m2-ctrl/asm/preshape-filter/: Cargo.toml  build.rs
m2-ctrl/asm/preshape-filter/src/: lib.rs
m2-ctrl/asm/preshape-filter/sys/: ASM_preshapeBesselF.c  ASM_preshapeBesselF.h  ASM_preshapeBesselF_data.c  ASM_preshapeBesselF_private.h  ASM_preshapeBesselF_types.h  rt_defines.h  rtwtypes.h
m2-ctrl/asm/simulink-models/: load_m2asm_data.m  m2asm_2_rust.slx  m2asm_tests.mat  zernike.m
m2-ctrl/asm/simulink_models/: dc_coupling_ASM_CpFsF-ASM_RbFsAxialD.eps  load_m2asm_data.m  m2asm_2_rust.slx  m2asm_tests.mat  test_data_readme.md
m2-ctrl/fsm/piezo-135/: Cargo.toml  build.rs
m2-ctrl/fsm/piezo-135/src/: lib.rs
m2-ctrl/fsm/piezo-135/sys/: pzt_Cfb_S1_3_5.c  pzt_Cfb_S1_3_5_private.h  pzt_Cfb_S1_3_5_types.h
m2-ctrl/fsm/piezo-246/: Cargo.toml  build.rs
m2-ctrl/fsm/piezo-246/src/: lib.rs
m2-ctrl/fsm/piezo-246/sys/: pzt_Cfb_S2_4_6.c  pzt_Cfb_S2_4_6.h  pzt_Cfb_S2_4_6_data.c  pzt_Cfb_S2_4_6_private.h  rt_defines.h  (+2 more)
m2-ctrl/fsm/piezo-7/: Cargo.toml  build.rs
m2-ctrl/fsm/piezo_S1_3_5/: Cargo.toml  build.rs
m2-ctrl/fsm/piezostack/: Cargo.toml  build.rs
m2-ctrl/fsm/positionner/: Cargo.toml  build.rs
m2-ctrl/fsm/positionner/src/: lib.rs
m2-ctrl/fsm/positionner/sys/: M2P_act_Cfb.c  M2P_act_Cfb.h  M2P_act_Cfb_private.h  M2P_act_Cfb_types.h  rt_defines.h  rtwtypes.h
m2-ctrl/fsm/simulink-models/: load_m2fsm_data.m  m2fsm_2_rust.slx  m2fsm_tests.mat  test_data_readme.md
mount/: README.md
mount/controller/: Cargo.toml  README.md  build.rs  mnt_fbC_step_test.mat
mount/controller/src/: lib.rs
mount/controller/sys/: Mount_Control.c  Mount_Control.h  Mount_Control_data.c  Mount_Control_private.h  Mount_Control_types.h  rt_defines.h
mount/controller/sys_fdr_1k/: Mount_Control.c  rtwtypes.h
mount/controller/sys_fdr_1k-az17Hz/: Mount_Control.h
mount/controller/sys_fdr_8k/: Mount_Control.c  Mount_Control.h  Mount_Control_data.c  Mount_Control_private.h  Mount_Control_types.h  rt_defines.h  rtwtypes.h
mount/controller/sys_pdr_za30_8k/: Mount_Control.c  Mount_Control.h  Mount_Control_data.c  Mount_Control_private.h  Mount_Control_types.h  rt_defines.h  rtwtypes.h
mount/driver/: Cargo.toml  README.md  build.rs  drv_test_dt.mat  mount_drive_y.mat  mount_driver_test.m  mount_driver_test.mat
mount/driver/src/: lib.rs
mount/driver/sys/: Mount_Drv_FDR2023.c  Mount_Drv_FDR2023_private.h
mount/driver/sys_fdr_1k/: Mount_Drv_FDR2023_data.c
mount/driver/sys_fdr_8k/: Mount_Drv_FDR2023.c  Mount_Drv_FDR2023.h  Mount_Drv_FDR2023_data.c  Mount_Drv_FDR2023_private.h  Mount_Drv_FDR2023_types.h  rt_defines.h  rtwtypes.h
mount/driver/sys_pdr_8k-linear/: Mount_Drv_PDR2021L.c  Mount_Drv_PDR2021L.h  Mount_Drv_PDR2021L_data.c  Mount_Drv_PDR2021L_private.h  Mount_Drv_PDR2021L_types.h  Mount_Drv_PDR2021_linear.c  Mount_Drv_PDR2021_linear.h  Mount_Drv_PDR2021_linear_data.c  Mount_Drv_PDR2021_linear_private.h  Mount_Drv_PDR2021_linear_types.h  rt_defines.h  rtwtypes.h
mount/drv_fdr2023/: Cargo.toml  build.rs
mount/drv_fdr2023/sys/: Mount_Drv_FDR2023.h  Mount_Drv_FDR2023_types.h  rt_defines.h  rtwtypes.h
mount/pid_ff_ctrl/: Cargo.toml  build.rs
mount/pid_ff_ctrl/src/: lib.rs
mount/pid_ff_ctrl/sys/: Mount_Control_data.c  Mount_Control_types.h  rtwtypes.h
mount/simulink-models/: load_mount_data.m  mnt_fbC_step_test.mat  mount_2_rust.slx
src/: lib.rs
src/m1/: mod.rs
src/m1/hp_load_cells/: M1HPloadcells.c  M1HPloadcells.h  M1HPloadcells_private.h  M1HPloadcells_types.h  mod.rs  rtwtypes.h
src/m1/local_controller/: M1LocalControl.c  M1LocalControl.h  M1LocalControl_data.c  M1LocalControl_private.h  M1LocalControl_types.h  mod.rs  rtwtypes.h
src/mount/: mod.rs
src/mount/controller/: MountControl0.c  MountControl0.h  MountControl0_data.c  MountControl0_private.h  MountControl0_types.h  ert_main.c  mod.rs  rtwtypes.h
src/mount/drives/: MountDrives.c  MountDrives.h  MountDrives_data.c  MountDrives_private.h  MountDrives_types.h  mod.rs  rtwtypes.h
wfc/ngao/: Cargo.toml  build.rs
wfc/ngao/src/: lib.rs
wfc/ngao/sys/: C_ngao.c  C_ngao.h  C_ngao_data.c  C_ngao_private.h  C_ngao_types.h  rt_defines.h  rtwtypes.h
wfc/simulink_models/: ao_2_rust.slx  ao_tests.mat
(+12 files in other folders)
