[workspace]
members = [
    "mount/driver",
    "mount/controller",
    "m1-ctrl/hardpoints",
    "m1-ctrl/actuators/center",
    "m1-ctrl/actuators/outer",
    "m2-ctrl/asm/preshape-filter",
    "m2-ctrl/asm/pid-damping",
    "m2-ctrl/asm/positionner",
    "m1-ctrl/hp-cpp",
    #"wfc/ngao",
]
resolver = "2"

[workspace.package]
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope C-code control system models"
repository = "https://github.com/rconan/gmt-controllers"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace.dependencies]
matio-rs = "1.1.2"
paste = "1.0.12"
simulink-rs = "4.0.2"
serde = { version = "1.0.197", features = ["derive"] }

[patch.crates-io]
simulink-rs = { path = "/home/rconan/projects/simulink-rs" }
