[workspace]
members = [
    "mount/driver",
    "mount/controller",
    "m1-ctrl/hardpoints",
    "m1-ctrl/actuators/center",
    "m1-ctrl/actuators/outer",
    "m2-ctrl/asm/preshape-filter",
    "m2-ctrl/asm/pid-damping",
    "m2-ctrl/asm/positionner",
    "m2-ctrl/fsm/positionner",
    "m2-ctrl/fsm/piezostack",
    #"wfc/ngao",
]
resolver = "2"

[workspace.package]
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope C-code control system models"
repository = "https://github.com/rconan/gmt-controllers"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace.dependencies]
matio-rs = "1.1.2"
paste = "1.0.12"
simulink-rs = "4.0.0"
serde = { version = "1.0.197", features = ["derive"] }
