[package]
name = "gmt_m1-ctrl_hardpoints-preprocessor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gmt_m1-ctrl_hardpoints-preprocessor"
readme.workspace = true
categories.workspace = true
keywords.workspace = true


[dependencies]
paste.workspace = true
serde.workspace = true
simulink-rs.workspace = true

[build-dependencies]
simulink-rs.workspace = true

[dev-dependencies]
matio-rs.workspace = true
