[package]
name = "gmt_m1-ctrl_center-actuators"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
paste.workspace = true
serde.workspace = true
simulink-rs.workspace = true

[build-dependencies]
simulink-rs.workspace = true
